# BlackBoard

./: .gitignore  .gitmodules  README.md  class_diagram.drawio
code/: app.py  config.py  handlers.py  response_message.py  views.py  worker.py
code/BlackboardClient/: .gitignore
code/BlackboardClient/api_calls/src/: lib.rs
code/BlackboardServer/: app.py  handlers.py  logger.py  models.py  views.py  worker.py
code/crabking/: Cargo.toml  README.md
code/crabking/api_calls/: Cargo.toml
code/crabking/src/: main.rs
code/test/: test_blackworker.py  test_concurrency.py  test_handlers.py  test_models_blackboard.py  test_models_message.py
doc/: class_diagram.drawio  known_issues.md  swagger_api_documentation.yaml
